--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
         <div class="cards">
         <label class="card" for="item-1" id="song-1">
             <a href="https://1fellype.github.io/Quiz/" target="_blank" title="Quiz sobre tecnologia">
-          <img src="\.assets\quiz.jpeg" alt="song"></a>
+          <img src="quiz.jpeg" alt="song"></a>
         </label>
 
         <label class="card" for="item-2" id="song-2">
             <a href="https://1fellype.github.io/meus-filmes-favoritos/" target="_blank" title="Meus filmes favoritos">
-          <img src="\.assets\preview.filmes.png" alt="song"></a>
+          <img src="preview.filmes.png" alt="song"></a>
         </label>
 
         <label class="card" for="item-3" id="song-3">
         <a href="https://1fellype.github.io/nlw-esports-explorer/" target="_blank" title="Meus jogos favoritos">
-          <img src="\.assets\preview.jogos.png" alt="song"></a>
+          <img src="preview.jogos.png" alt="song"></a>
         </label>
       </div>
 
